Modifiqué titulares de trabajo y puse años

--- a/style.css
+++ b/style.css
@@ -34,9 +34,9 @@ h3 {
     margin: 0;
 }
 
-.titulo-generico {
-    font-family: "Open Sans. sans-serif";
-   margin: 16px 0;
+.profesion {
+    margin: 48px 0 40px;
+
 }
 
 a {
