--- a/style.css
+++ b/style.css
@@ -7,24 +7,32 @@
 /*GLOBAL STYLES--------------------------------*/
 /* apply a natural box layout model to all elements, but allowing components to change */
 html {
-  box-sizing: border-box;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
 }
-*, *:before, *:after {
-  box-sizing: inherit;
+
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
 }
+
 
 body {
     font-family: 'Open Sans', sans-serif;
     margin: 0;
 }
 
-h1, h2 {
+h1,
+h2 {
     font-family: 'Caveat', cursive;
     font-weight: 400;
 }
+
 h1 {
     font-size: 80px;
 }
+
 h2 {
     font-size: 40px;
     margin-top: 0;
@@ -50,18 +58,7 @@ a:hover {
     max-width: 950px;
     margin: 0 auto;
     padding: 60px 50px;
-    overflow:auto;   
-}
-
-.col-narrow {
-    width: 30%;
-    float: left;
-}
-
-.col-wide {
-    width: 70%;
-    float: left;
-    padding-left: 20px;
+    overflow: auto;
 }
 
 .uppercase {
@@ -77,7 +74,8 @@ a:hover {
 }
 
 /*HEADER AND FOOTER*/
-header, footer {
+header,
+footer {
     background: #2B2D42;
     color: #8D99AE;
 }
@@ -92,7 +90,9 @@ header {
 .profile-img {
     border-radius: 50%;
 }
-header h1, header h2 {
+
+header h1,
+header h2 {
     color: #EDF2F4;
     margin: 0;
 }
@@ -125,6 +125,7 @@ nav a {
 footer {
     text-align: center;
 }
+
 .contact-info a {
     padding: 40px;
     display: inline-block;
@@ -135,7 +136,7 @@ footer {
     background: #EDF2F4;
 }
 
-h3 ~ p {
+h3~p {
     margin: 0;
 }
 
@@ -148,11 +149,38 @@ h3 ~ p {
 }
 
 /* EDUCATION -------*/
+
 .education {
-    background: #8D99AE;
+    background: linear-gradient(rgba(141, 153, 174, 0.8),
+            rgba(141, 153, 174, 0.5)), url(https://wallpapercave.com/wp/wp1878494.jpg) no-repeat fixed;
+    background-size: cover;
 }
 
-p + h3 {
+p+h3 {
     margin-top: 32px;
 }
-/*---------------------*/
+
+/*-- MEDIA QUERIES-------------------*/
+
+@media (min-width: 900px) {
+    .col-narrow {
+        width: 30%;
+        float: left;
+    }
+    
+    .col-wide {
+        width: 70%;
+        float: left;
+        padding-left: 20px;
+    }
+}
+
+@media (max-width: 899px) {
+    header {
+        text-align: center;
+    }
+
+    .profile-img {
+        width: 200px;
+    }
+}
