--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ h3~p {
 
 .education {
     background: linear-gradient(rgba(141, 153, 174, 0.8),
-            rgba(141, 153, 174, 0.5)), url(https://wallpapercave.com/wp/wp1878494.jpg) no-repeat fixed;
+            rgba(141, 153, 174, 0.5)), url(http://bsascompany.com/site/es/wp-content/uploads/2016/11/buenos-aires-puerto-madero.jpg) no-repeat fixed;
     background-size: cover;
 }
 
